# evalops

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: CLAUDE.md  database.py  evaluator.py  main.py  models.py  requirements.txt
dashboard/: app.py
data/: golden_dataset.json
docs/superpowers/specs/: 2026-05-21-python-sdk-design.md
sdk/: pyproject.toml
sdk/evalops/: __init__.py  pricing.py  span.py  tracer.py
sdk/evalops/tests/: test_span.py  test_tracer.py
tests/: conftest.py  test_api.py  test_evaluator.py
